src/App.scss
@use "scss/globals.scss";

$bpmin: 360px;
$bpmax: 1366px;

//////////////////////////////////////////////////////////////////
// Rico Slideshow Config 1
//////////////////////////////////////////////////////////////////

.bb-slideshow {
  color: white;
  max-width: 100vw;
  overflow-y: hidden;
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 15%, #000 15%);
  @include globals.fluid-property(margin-top, $bpmin, $bpmax, 76px, 66px);
  .bb-overlay-wrapper-1,
  .bb-overlay-wrapper-2,
  .bb-content-wrapper,
  .bb-slide-wrapper {
    @include globals.fluid-property(margin-top, $bpmin, $bpmax, 30px, 86px);
  }

  .bb-content-wrapper {
    transition: height 0.9s ease-out;
    @include globals.fluid-property(min-height, $bpmin, $bpmax, 390px, 506px);
    .bb-content {
      position: absolute;
      padding-right: 28px;
      pointer-events: none;
      visibility: hidden;
      will-change: visibility;
      transition: visibility 0.3s; /* Avoids flicker */
      @include globals.fluid-property(padding-top, $bpmin, $bpmax, 20px, 78px);
      @include globals.fluid-property(margin-left, $bpmin, $bpmax, 28px, 79px);

      > * > * {
        position: relative;
        transform: translateY(10vw);
        will-change: unset;
        opacity: 0;
        transition:
          opacity 0.4s linear,
          transform 1s ease-out;
        transition-delay: calc(
          (var(--numChildren) - var(--childIndex) - 1) * 0.08s
        );
      }

      &.bb-active {
        visibility: visible;
        pointer-events: all;
        > * > * {
          will-change: opacity, transform;
          transform: translateY(0);
          opacity: 1;
          transition-delay: calc(var(--childIndex) * 0.2s + 0.1s);
        }
      }

      &.bb-previous {
        visibility: visible;
        > * > * {
          will-change: opacity, transform;
          transform: translateY(10vw);
          opacity: 0;
          transition:
            opacity 0.4s linear,
            transform 0.4s ease-out;
        }
      }
    }

    a {
      text-decoration: none;
      cursor: pointer;
    }

    h3 {
      margin-top: 0;
      @include globals.fluid-property(width, $bpmin, $bpmax, 47%, 52%);
      @include globals.fluid-property(
        margin-bottom,
        $bpmin,
        $bpmax,
        84px,
        73px
      );
      @include globals.fluid-property(
        line-height,
        $bpmin,
        $bpmax,
        1.1em,
        1.05em
      );
      @include globals.fluid-property(
        letter-spacing,
        $bpmin,
        $bpmax,
        0.04em,
        0.02em
      );
      @include globals.fluid-property(font-size, $bpmin, $bpmax, 16px, 30px);
    }

    h2 {
      font-weight: 900;
      margin-top: 0;
      max-width: 87vw;
      @include globals.fluid-property(
        letter-spacing,
        $bpmin,
        $bpmax,
        0.03em,
        0.01em
      );
      @include globals.fluid-property(font-size, $bpmin, $bpmax, 35px, 49px);
      @include globals.fluid-property(
        margin-bottom,
        $bpmin,
        $bpmax,
        16px,
        14px
      );
    }

    p {
      margin-top: 0;
      font-size: 14px;
      font-weight: 500;
      max-width: 83vw;
      @include globals.fluid-property(
        line-height,
        $bpmin,
        $bpmax,
        1.5em,
        1.65em
      );
      @include globals.fluid-property(
        letter-spacing,
        $bpmin,
        $bpmax,
        0.01em,
        0.072em
      );
      @include globals.fluid-property(width, $bpmin, $bpmax, 300px, 500px);
      @include globals.fluid-property(
        margin-bottom,
        $bpmin,
        $bpmax,
        25px,
        32px
      );
    }

    button,
    a {
      font-size: 12px;
      display: inline-block;
      font-weight: 700;
      background-color: transparent;
      color: white;
      border: 2.5px solid #fff;
      border-radius: 50px;
      text-align: center;
      letter-spacing: 0.045em;
      @include globals.fluid-property(padding-top, $bpmin, $bpmax, 6px, 10px);
      @include globals.fluid-property(padding-bottom, $bpmin, $bpmax, 5px, 9px);
      @include globals.fluid-property(padding-left, $bpmin, $bpmax, 5px, 12px);
      @include globals.fluid-property(padding-right, $bpmin, $bpmax, 5px, 12px);
      @include globals.fluid-property(margin-bottom, $bpmin, $bpmax, 6px, 9px);

      &.bb-cta {
        background-color: #fff;
        color: #000;
        display: block;
        font-weight: 900;
        font-size: 15px;
        letter-spacing: 0.045em;
        display: inline-block;
        cursor: pointer;
        margin-bottom: 25px;
        @include globals.fluid-property(
          padding-top,
          $bpmin,
          $bpmax,
          12px,
          16px
        );
        @include globals.fluid-property(
          padding-bottom,
          $bpmin,
          $bpmax,
          12px,
          17px
        );
        @include globals.fluid-property(
          padding-left,
          $bpmin,
          $bpmax,
          12px,
          14px
        );
        @include globals.fluid-property(
          padding-right,
          $bpmin,
          $bpmax,
          12px,
          14px
        );
      }
    }
  }

  .bb-arrow-button-wrapper {
    display: none;
  }

  .bb-slide-wrapper,
  .bb-overlay-wrapper-1,
  .bb-overlay-wrapper-2 {
    @include globals.fluid-property(height, $bpmin, $bpmax, 225px, 767px);
  }

  .bb-slide-wrapper {
    background-color: #000;
    .bb-slide-1 {
      @include globals.fluid-property(
        background-position-x,
        $bpmin,
        $bpmax,
        50px,
        100px
      );
    }
    .bb-slide-3 {
      @include globals.fluid-property(
        background-position-x,
        $bpmin,
        $bpmax,
        50px,
        100px
      );
    }
    .bb-slide-4 {
      @include globals.fluid-property(
        background-position-x,
        $bpmin,
        $bpmax,
        60px,
        200px
      );
    }
    .bb-slide-5 {
      @include globals.fluid-property(
        background-position-x,
        $bpmin,
        $bpmax,
        20px,
        0px
      );
    }
  }

  .bb-overlay-wrapper-1 {
    $offset: -6.05vw;
    .bb-overlay {
      display: none;
    }
    .bb-overlay-1-1 {
      display: block;
      height: 100vw;
      background-image: url("/assets/images/1-foreground.png");
      background-repeat: no-repeat;
      margin-top: $offset;
      transform: translateX(50vw);
      transition:
        opacity 1s linear,
        transform 1s ease-out;
      @include globals.fluid-property(
        background-position-x,
        $bpmin,
        $bpmax,
        103%,
        100%
      );
      @include globals.fluid-property(
        background-size,
        $bpmin,
        $bpmax,
        127px,
        433px
      );
      &.bb-active {
        transform: translateX(-16.1vw);
        opacity: 1;
      }
    }
  }

  .bb-overlay-wrapper-2 {
    // From SPS. Changed to #000 to overlap the BG seamlessly.
    // to left,
    // rgba(37, 45, 55, 0) 40%,
    // #000000 72.92%,
    // #09101a 100%
    background: linear-gradient(
        to left,
        rgba(0, 0, 0, 0) 40%,
        #000 72.92%,
        #000 100%
      ),
      linear-gradient(to bottom, rgba(0, 0, 0, 0) 65%, #000000 90%);
  }

  .bb-thumbnail-button-wrapper {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 2vw;

    @include globals.fluid-property(margin-top, $bpmin, $bpmax, 10px, 34px);
    @include globals.fluid-property(padding-bottom, $bpmin, $bpmax, 80px, 51px);
    @include globals.fluid-property(margin-left, $bpmin, $bpmax, 22px, 88px);
    @include globals.fluid-property(margin-right, $bpmin, $bpmax, 22px, 88px);

    @include globals.breakpoint-up(xs) {
      grid-template-columns: repeat(3, 1fr);
      @include globals.fluid-property(gap, $bpmin, $bpmax, 0px, 40px);
    }

    @include globals.breakpoint-up(lg) {
      display: flex;
      align-items: flex-end;
      gap: 26px;
    }

    button.bb-thumbnail {
      cursor: pointer;
      opacity: 0.7;
      overflow: hidden;
      padding: 0;
      box-sizing: border-box;
      outline: 0;
      border: 0;
      background-repeat: no-repeat;
      background-color: transparent;
      background-size: contain;
      background-position: center center;
      aspect-ratio: 1 / 1;
      max-width: 164px;
      display: flex;
      justify-content: center;
      align-items: center;
      justify-self: center;
      transition: transform 0.3s ease-out;

      @include globals.breakpoint-up(xs) {
        min-width: 30%;
      }

      @include globals.breakpoint-up(lg) {
        min-width: unset;
        width: 110px;
        max-width: 176px;
        position: relative;
        top: 8px;
      }

      &.bb-active {
        background-image: url("@/assets/images/border.svg");
        opacity: 1;
        cursor: default;
        @include globals.breakpoint-up(lg) {
          width: 20%;
          top: 0;
        }
        &:hover {
          // opacity: 1;
          transform: scale(1);
        }
      }

      img {
        display: block;
        border-radius: 5%;
        width: 86%;
        max-width: 144px;
      }

      &:hover {
        opacity: 0.9;
        transform: scale(1.1);
      }
    }
  }
}

//////////////////////////////////////////////////////////////////
// Rico Slideshow Config 2
//////////////////////////////////////////////////////////////////

// TODO: Set this up using alternate controls.

